💄 default private feedback

--- a/themes/jb/layouts/contact/single.html
+++ b/themes/jb/layouts/contact/single.html
@@ -69,7 +69,7 @@
           <div class="column is-12">
             <input class="radio" type="radio" id="feedback-public" name="Field9" value="I grant permission to read or post this feedback on-air and/or on the website.">
             <label for="feedback-public">My feedback can be used on the show</label><br>
-            <input class="radio" type="radio" id="feedback-private" name="Field9" value="This feedback is private.">
+            <input class="radio" type="radio" id="feedback-private" name="Field9" value="This feedback is private." checked>
             <label for="feedback-private">My feedback is private</label><br>  
           </div>
         </div>
