--- a/themes/jb/layouts/contact/single.html
+++ b/themes/jb/layouts/contact/single.html
@@ -17,7 +17,7 @@
       <h1>{{ .Title }}</h1>
       <form method="POST" action="https://jblive.wufoo.com/api/v3/forms/w7x2r7/entries.json">
         <div class="columns">
-          <div class="column is-4">
+          <div class="column is-4 is-offset-2">
             <label class="label" for="Field4">First Name:</label>
             <input class="input" type="text" id="Field4">
           </div>
@@ -28,7 +28,7 @@
         </div>
 
         <div class="columns">
-          <div class="column">
+          <div class="column is-8 is-offset-2">
             <label class="label" for="Field7">Show:</label>
             <select class="select" type="text" id="Field7">
               <option value="General Comments" selected>General Comments</option>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="columns">
-          <div class="column is-4">
+          <div class="column is-4 is-offset-2">
             <label class="label" for="Field6">Email:</label>
             <input class="input" type="email" id="Field6">
           </div>
@@ -53,20 +53,20 @@
         </div>
 
         <div class="columns">
-          <div class="column is-8">
+          <div class="column is-8 is-offset-2">
             <label class="label" for="Field1">Message:</label>
             <textarea class="textarea" id="Field1"></textarea>
           </div>
         </div>
         <div class="columns">
-          <div class="column">
+          <div class="column is-8 is-offset-2">
             <label class="label" for="Field11">Attachments</label>
             <input type="file">
           </div>
         </div>
 
         <div class="columns">
-          <div class="column is-12">
+          <div class="column is-8 is-offset-2">
             <input class="radio" type="radio" id="feedback-public" name="Field9" value="I grant permission to read or post this feedback on-air and/or on the website.">
             <label for="feedback-public">My feedback can be used on the show</label><br>
             <input class="radio" type="radio" id="feedback-private" name="Field9" value="This feedback is private." checked>
@@ -75,7 +75,7 @@
         </div>
         
         <div class="columns">
-          <div class="column mb-4">
+          <div class="column is-8 is-offset-2 mb-4">
             <button class="button is-primary" type="submit">Submit</button>
           </div>
         </div>
