Fix form text color

--- a/themes/jb/assets/css/libs/bulma/sass/form/shared.sass
+++ b/themes/jb/assets/css/libs/bulma/sass/form/shared.sass
@@ -3,7 +3,7 @@
 
 $form-colors: $colors !default
 
-$input-color: $text-strong !default
+$input-color: $jb-grey-dark !default
 $input-background-color: $scheme-main !default
 $input-border-color: $border !default
 $input-height: $control-height !default
