continue learning about forms

--- a/themes/jb/layouts/contact/single.html
+++ b/themes/jb/layouts/contact/single.html
@@ -21,7 +21,8 @@
   <div class="container">
     <div class="content">
       <h1>{{ .Title }}</h1>
-      <form>
+      
+      <form id="contact-form">
         <div class="columns">
           <div class="column is-4 is-offset-2">
             <label class="label" for="Field4">First Name:</label>
@@ -67,12 +68,13 @@
             <textarea class="textarea" id="Field1"></textarea>
           </div>
         </div>
-        <div class="columns">
+
+        <!-- <div class="columns">
           <div class="column is-8 is-offset-2">
             <label class="label" for="Field11">Attachments</label>
             <input type="file">
           </div>
-        </div>
+        </div> -->
 
         <div class="columns">
           <div class="column is-8 is-offset-2">
